styles/style.css
@font-face {
  font-family: 'Open Sans';
  font-style: light;
  font-weight: 300;
  font-display: swap;
  src: url('../assets/fonts/OpenSans-Light.ttf') format('truetype');
}

@font-face {
  font-family: 'Open Sans';
  font-style: extra-bold;
  font-weight: 800;
  font-display: swap;
  src: url('../assets/fonts/OpenSans-Extrabold.ttf') format('truetype');
}

@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../assets/fonts/OpenSans-Regular.ttf') format('truetype');
}

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  outline: 0;
  box-sizing: border-box;
  border: 0;
  font-size: 100%;
  line-height: 100%;
  -webkit-text-size-adjust: none;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

body,
html {
  /* Fallback solid color */
  background: #f4f7ff;
  /* Vertical gradient: from white (top) to #f4f7ff (bottom) */
  /* background: linear-gradient(to bottom, #ffffff 0%, #f4f7ff 100%); */
  overflow: hidden;
}

button {
  font-family: 'Open Sans', sans-serif;
}

/* @media (-webkit-device-pixel-ratio: 1.25) {
  #wrapper_app {
    zoom: 0.8;
  }
}

@media (-webkit-device-pixel-ratio: 1.5) {
  #wrapper_app {
    zoom: 0.6;
  }
} */

input {
  text-align: center;
  width: 100%;
}

#app {
  width: 1920px;
  height: 1080px;
  display: flex;
  flex-direction: column;
}

/* SECTION */
section {
  width: 100%;
  height: 100%;
  /*  height: calc(100% - 150px); */
  position: relative;
}

/* SECTION WELCOME */
#welcome {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 0 4rem;
  z-index: 1;
}

.welcome_content {
  display: flex;
  width: 100%;
}

#dot_1,
#dot_2 {
  background-image: url(../assets/medias/rond_rouge.svg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 100px;
  height: 100px;
  z-index: 100;
}

.welcome_content--block {
  color: #606773;
  padding-left: 4rem;
}

.welcome_content--block h2,
.welcome_content--block p {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 80px;
  line-height: 1.2;
  margin-bottom: 20px;
}

#welcome ul li span {
  margin-bottom: 5px;
}

.welcome_content--block p {
  font-size: 22px;
}

#welcome ul li {
  margin-bottom: 20px;
}

#welcome ul li span {
  position: relative;
  display: block;
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
  font-size: 22px;
  padding-left: 15px;
  line-height: 1.2;
}

#welcome .bold {
  font-weight: 800;
}

#welcome ul li span::before {
  content: '\2022';
  position: absolute;
  top: 0;
  left: 0;
  color: #d64123;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 10px;
}

#tool_button,
#output_button,
#tool_button_2 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../assets/medias/trace.svg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 466px;
  height: 113px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
  font-size: 52px;
  font-weight: 800;
  text-align: center;
  color: #fff;
  cursor: pointer;
}

#tool_button_2 {
  padding-right: 80px;
}

#tool_button {
  padding-right: 40px;
}

#output_button {
  padding-right: 104px;
}

#output_button,
#tool_button_2 {
  display: none;
}

#tool_button svg,
#output_button svg,
#tool_button_2 svg {
  width: 60px;
  position: relative;
  height: 100%;
}

button span {
  display: block;
  margin-left: 10px;
  margin-right: 10px;
}

/* SECTION TOOL */
#tool {
  display: none;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  width: 100%;
  padding: 0 4rem;
  /*  margin-top: 30px; */

  z-index: 1;
}

#tool .tool_content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /*  margin-bottom: 30px; */
}

.tool_content--block {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
  margin-top: 20px;
}

.tool_content--block--inputs {
  display: flex;
  align-items: center;
  width: 100%;
}

.tool_content--block--inputs--select {
  position: relative;
  display: flex;
  align-items: center;
  gap: 20px;
}

.table_select {
  position: relative;
}

.tool_content--block--inputs--select label {
  white-space: nowrap;
  font-weight: 800;
  font-size: 22px;
  color: #606773;
}

select {
  display: flex;
  align-items: center;
  border: none;
  width: 100%;
  height: 54px;
  background-color: #fff;
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  font-size: 22px;
  color: #606773;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml;utf8,<svg fill='%23D64123' height='40' viewBox='0 0 24 24' width='40' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
  background-repeat: no-repeat;
  background-position-x: 100%;
  background-position-y: 50%;
  padding: 0 8px;
}

.tool_content--block--inputs--select select {
  min-width: 220px;
  padding-left: 30px;
}

.table_select select {
  font-size: 15px;
}

select,
option:checked {
  line-height: 1.2;
  width: 100%;
  white-space: normal;
  word-wrap: break-word;
  max-width: 100%;
}

select[name='presentation'],
select[name='presentation'] option:checked {
  line-height: 1.5;
}

.tool_content--block--inputs--checkbox {
  display: flex;
  align-items: center;
  gap: 20px;
  margin-left: 40px;
}

.container {
  display: block;
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}
/* ... */

